Bug 1365190 P2 - don't assert NeedMoreVideo() in audio events; r=jwwang

The assertion fails if we call SeekToNextFrame() on a video which has done
video decoding but keeps decoding audio.

MozReview-Commit-ID: F9qpfYI2Ajo